게시글 좋아요 및 조회수 증가 및 리팩토링

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,85 +1,88 @@
-index.hero.title=우리 사이트에 오신 것을 환영합니다!
-index.hero.subtitle=최신 트렌드의 직관적인 커뮤니티, 지금 바로 시작해보세요.
-index.hero.button.exploreBoard=게시판 둘러보기
+index.hero.title=\uC6B0\uB9AC \uC0AC\uC774\uD2B8\uC5D0 \uC624\uC2E0 \uAC83\uC744 \uD658\uC601\uD569\uB2C8\uB2E4!
+index.hero.subtitle=\uCD5C\uC2E0 \uD2B8\uB80C\uB4DC\uC758 \uC9C1\uAD00\uC801\uC778 \uCEE4\uBBA4\uB2C8\uD2F0, \uC9C0\uAE08 \uBC14\uB85C \uC2DC\uC791\uD574\uBCF4\uC138\uC694.
+index.hero.button.exploreBoard=\uAC8C\uC2DC\uD310 \uB458\uB7EC\uBCF4\uAE30
 
 # Error Page
-error.title=에러 발생!
-error.content=죄송합니다. 요청한 페이지나 기능을 처리할 수 없습니다.
-error.details.status.label=상태:
-error.details.status.default=상태 정보 없음
-error.details.error.label=오류:
-error.details.error.default=오류 정보 없음
-error.details.message.label=메시지:
-error.details.message.default=메시지 없음
+error.title=\uC5D0\uB7EC \uBC1C\uC0DD!
+error.content=\uC8C4\uC1A1\uD569\uB2C8\uB2E4. \uC694\uCCAD\uD55C \uD398\uC774\uC9C0\uB098 \uAE30\uB2A5\uC744 \uCC98\uB9AC\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+error.details.status.label=\uC0C1\uD0DC:
+error.details.status.default=\uC0C1\uD0DC \uC815\uBCF4 \uC5C6\uC74C
+error.details.error.label=\uC624\uB958:
+error.details.error.default=\uC624\uB958 \uC815\uBCF4 \uC5C6\uC74C
+error.details.message.label=\uBA54\uC2DC\uC9C0:
+error.details.message.default=\uBA54\uC2DC\uC9C0 \uC5C6\uC74C
 # Button Text (ensure these are consistent or add if missing for error page context)
-button.home=홈으로
-button.back=뒤로 가기
+button.home=\uD648\uC73C\uB85C
+button.back=\uB4A4\uB85C \uAC00\uAE30
 
 # Header elements
-title.default=우리 사이트
+title.default=\uC6B0\uB9AC \uC0AC\uC774\uD2B8
 site.name=MySite
-button.theme.toggle.title=테마 변경
+button.theme.toggle.title=\uD14C\uB9C8 \uBCC0\uACBD
 
 # Footer Text
-footer.copyright= 2025 우리 사이트
-footer.terms=이용약관
-footer.privacy=개인정보처리방침
-footer.contact=문의하기
+footer.copyright= 2025 \uC6B0\uB9AC \uC0AC\uC774\uD2B8
+footer.terms=\uC774\uC6A9\uC57D\uAD00
+footer.privacy=\uAC1C\uC778\uC815\uBCF4\uCC98\uB9AC\uBC29\uCE68
+footer.contact=\uBB38\uC758\uD558\uAE30
 
 # Login Form Placeholders
-label.username.placeholder=이메일 주소를 입력하세요
-label.password.placeholder=비밀번호를 입력하세요
+label.username.placeholder=\uC774\uBA54\uC77C \uC8FC\uC18C\uB97C \uC785\uB825\uD558\uC138\uC694
+label.password.placeholder=\uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD558\uC138\uC694
 
 # Registration Form Placeholders
-placeholder.email=이메일 주소를 입력하세요
-placeholder.name=이름을 입력하세요
-placeholder.passwordConfirm=비밀번호를 다시 입력하세요
-placeholder.detailAddress=상세 주소를 입력하세요
+placeholder.email=\uC774\uBA54\uC77C \uC8FC\uC18C\uB97C \uC785\uB825\uD558\uC138\uC694
+placeholder.name=\uC774\uB984\uC744 \uC785\uB825\uD558\uC138\uC694
+placeholder.passwordConfirm=\uBE44\uBC00\uBC88\uD638\uB97C \uB2E4\uC2DC \uC785\uB825\uD558\uC138\uC694
+placeholder.detailAddress=\uC0C1\uC138 \uC8FC\uC18C\uB97C \uC785\uB825\uD558\uC138\uC694
 
 # Create Category Form Placeholders
-placeholder.category.name=카테고리 이름을 입력하세요
+placeholder.category.name=\uCE74\uD14C\uACE0\uB9AC \uC774\uB984\uC744 \uC785\uB825\uD558\uC138\uC694
 
 # Post Detail Page
-post.title.default=제목 없음
-post.category.unclassified=미분류
-post.author.unknown=작성자 미상
+post.title.default=\uC81C\uBAA9 \uC5C6\uC74C
+post.category.unclassified=\uBBF8\uBD84\uB958
+post.author.unknown=\uC791\uC131\uC790 \uBBF8\uC0C1
 post.file.size.kb=KB
-confirm.delete.post=정말 이 게시글을 삭제하시겠습니까?
-comment.author.unknown=작성자 미상
-confirm.delete.comment=정말 이 댓글을 삭제하시겠습니까?
-comment.login.prefix=댓글을 작성하려면 
-comment.login.suffix=이 필요합니다.
+post.comments=\uB313\uAE00
+confirm.delete.post=\uC815\uB9D0 \uC774 \uAC8C\uC2DC\uAE00\uC744 \uC0AD\uC81C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
+comment.author.unknown=\uC791\uC131\uC790 \uBBF8\uC0C1
+confirm.delete.comment=\uC815\uB9D0 \uC774 \uB313\uAE00\uC744 \uC0AD\uC81C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
+comment.login.prefix=\uB313\uAE00\uC744 \uC791\uC131\uD558\uB824\uBA74 
+comment.login.suffix=\uC774 \uD544\uC694\uD569\uB2C8\uB2E4.
+comment.reply.placeholder=\uB313\uAE00\uC744 \uC791\uC131\uD574\uC8FC\uC138\uC694
 
-# 소셜 로그인
-login.social.title=소셜 계정으로 로그인
-login.social.google=Google로 로그인
-login.social.kakao=카카오로 로그인
-login.social.naver=네이버로 로그인
+# \uC18C\uC15C \uB85C\uADF8\uC778
+login.social.title=\uC18C\uC15C \uACC4\uC815\uC73C\uB85C \uB85C\uADF8\uC778
+login.social.google=Google\uB85C \uB85C\uADF8\uC778
+login.social.kakao=\uCE74\uCE74\uC624\uB85C \uB85C\uADF8\uC778
+login.social.naver=\uB124\uC774\uBC84\uB85C \uB85C\uADF8\uC778
 
 # Post Edit Page
-image.preview.alt=이미지 미리보기
+image.preview.alt=\uC774\uBBF8\uC9C0 \uBBF8\uB9AC\uBCF4\uAE30
 file.size.unit.bytes=Bytes
 file.size.unit.kb=KB
 file.size.unit.mb=MB
 file.size.unit.gb=GB
 
 # Post List Page
-pagination.info.items=총 {2}개 항목 중 {0} - {1}번째 항목
-post.search.placeholder=검색어 입력...
+pagination.info.items=\uCD1D {2}\uAC1C \uD56D\uBAA9 \uC911 {0} - {1}\uBC88\uC9F8 \uD56D\uBAA9
+post.search.placeholder=\uAC80\uC0C9\uC5B4 \uC785\uB825...
 
 # Post Form
-post.create=게시글 등록
-post.title=제목
-post.title.placeholder=제목을 입력하세요
-post.category=카테고리
-post.content=내용
-post.content.placeholder=내용을 입력하세요
-option.select=선택하세요
-button.cancel=취소
-button.edit=수정
-button.write=글쓰기
-button.submit=등록
+post.create=\uAC8C\uC2DC\uAE00 \uB4F1\uB85D
+post.title=\uC81C\uBAA9
+post.title.placeholder=\uC81C\uBAA9\uC744 \uC785\uB825\uD558\uC138\uC694
+post.category=\uCE74\uD14C\uACE0\uB9AC
+post.content=\uB0B4\uC6A9
+post.content.placeholder=\uB0B4\uC6A9\uC744 \uC785\uB825\uD558\uC138\uC694
+post.views=\uC870\uD68C\uC218
+option.select=\uC120\uD0DD\uD558\uC138\uC694
+button.cancel=\uCDE8\uC18C
+button.edit=\uC218\uC815
+button.write=\uAE00\uC4F0\uAE30
+button.submit=\uB4F1\uB85D
 
 # Pagination
-pagination.prev=이전
-pagination.next=다음
+pagination.prev=\uC774\uC804
+pagination.next=\uB2E4\uC74C
