--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -45,10 +45,22 @@ button.try.again=Try Again
 button.remove=Remove
 button.theme.toggle.title=Toggle Theme
 
+# Post List Page
+post.views=Views
+# Pagination
+pagination.page=Page
+pagination.of=of
+pagination.showing=Showing
+pagination.entries=entries
+pagination.first=First
+pagination.previous=Previous
+pagination.last=Last
+
 #-------------------------------------------------------
 # Main Content
 #-------------------------------------------------------
 welcome.message=Welcome to Our Site!
+post.comments=Comments
 main.subtitle=Connect and communicate on various topics
 main.popular.posts=Popular Posts
 main.recent.posts=Recent Posts
@@ -178,7 +190,9 @@ post.attachments=File Attachments
 post.existing.attachments=Existing Attachments
 post.new.attachments=New Attachments
 post.downloads=Downloads
+post.likes=Likes
 
+comment.reply.placeholder=Write a reply
 #-------------------------------------------------------
 # Post List Page
 #-------------------------------------------------------
