--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -103,6 +103,7 @@ post.title.placeholder=\uC81C\uBAA9\uC744 \uC785\uB825\uD558\uC138\uC694
 post.content.placeholder=\uB0B4\uC6A9\uC744 \uC785\uB825\uD558\uC138\uC694
 post.search.placeholder=\uAC80\uC0C9\uC5B4 \uC785\uB825...
 comment.placeholder=\uB313\uAE00\uC744 \uC791\uC131\uD574\uC8FC\uC138\uC694
+comment.reply.placeholder=\uB313\uAE00\uB97C \uC791\uC131\uD574\uC8FC\uC138\uC694
 search.placeholder=\uAC80\uC0C9\uC5B4\uB97C \uC785\uB825\uD558\uC138\uC694
 
 #-------------------------------------------------------
@@ -178,13 +179,17 @@ post.attachments=\uD30C\uC77C \uCCA8\uBD80
 post.existing.attachments=\uAE30\uC874 \uCCA8\uBD80 \uD30C\uC77C
 post.new.attachments=\uC0C8 \uCCA8\uBD80 \uD30C\uC77C
 post.downloads=\uB2E4\uC6B4\uB85C\uB4DC
+post.likes=\uC88B\uC544\uC694
+post.comments=\uB313\uAE00
+post.views=\uC870\uD68C\uC218
+
 
 #-------------------------------------------------------
 # \uAC8C\uC2DC\uAE00 \uBAA9\uB85D \uD398\uC774\uC9C0
 #-------------------------------------------------------
 pagination.info.items=\uCD1D {2}\uAC1C \uD56D\uBAA9 \uC911 {0} - {1}\uBC88\uC9F8 \uD56D\uBAA9
-pagination.prev=이전
-pagination.next=다음
+pagination.prev=\uC774\uC804
+pagination.next=\uB2E4\uC74C
 
 #-------------------------------------------------------
 # \uD30C\uC77C \uC5C5\uB85C\uB4DC \uAD00\uB828
