게시판 완성

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,12 @@ error.details.error.label=\uC624\uB958:
 error.details.error.default=\uC624\uB958 \uC815\uBCF4 \uC5C6\uC74C
 error.details.message.label=\uBA54\uC2DC\uC9C0:
 error.details.message.default=\uBA54\uC2DC\uC9C0 \uC5C6\uC74C
+
+# 500 Error Messages
+error.500.title=\uC5B4\uB514 \uC624\uB958
+error.500.content=\uC8C4\uC1A1\uD569\uB2C8\uB2E4. \uC5B4\uB514\uC5D0 \uC624\uB958 \uC815\uBCF4 \uC5C6\uC74C
+error.500.message=\uD14C\uC2E0 \uC720\uD569 \uC5C6\uC2B5\uB2C8\uB2E4. \uC8FC\uAE30 \uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+
 # Button Text (ensure these are consistent or add if missing for error page context)
 button.home=\uD648\uC73C\uB85C
 button.back=\uB4A4\uB85C \uAC00\uAE30
@@ -86,3 +92,5 @@ button.submit=\uB4F1\uB85D
 # Pagination
 pagination.prev=\uC774\uC804
 pagination.next=\uB2E4\uC74C
+
+language.current=\uC5B8\uC5B4
