--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,5 +1,5 @@
 #-------------------------------------------------------
-# Application Basic Information
+# Application Basic Info
 #-------------------------------------------------------
 app.name=Our Site
 site.name=MySite
@@ -11,7 +11,7 @@ title.default=Our Site
 title.index=Main Page
 title.login=Login
 title.register=Sign Up
-title.post.list=Posts
+title.post.list=Post List
 title.post.detail=Post Details
 title.post.create=Create Post
 title.post.edit=Edit Post
@@ -20,7 +20,7 @@ title.mypage=My Page
 title.admin=Admin Page
 
 #-------------------------------------------------------
-# Button Text
+# Button Texts
 #-------------------------------------------------------
 button.login=Login
 button.logout=Logout
@@ -30,38 +30,27 @@ button.cancel=Cancel
 button.update=Update
 button.delete=Delete
 button.save=Save
-button.back=Back
+button.back=Go Back
 button.home=Home
 button.search=Search
 button.user.register=Sign Up
 button.searchZipCode=Find Zip Code
 button.board=Board
 button.post.write=Write Post
-button.post.list=Back to List
+button.post.list=Go to List
 button.post.edit=Edit
 button.post.delete=Delete
 button.comment.submit=Submit Comment
 button.try.again=Try Again
 button.remove=Remove
 button.theme.toggle.title=Toggle Theme
-
-# Post List Page
-post.views=Views
-# Pagination
-pagination.page=Page
-pagination.of=of
-pagination.showing=Showing
-pagination.entries=entries
-pagination.first=First
-pagination.previous=Previous
-pagination.last=Last
+button.reply=Reply
 
 #-------------------------------------------------------
 # Main Content
 #-------------------------------------------------------
 welcome.message=Welcome to Our Site!
-post.comments=Comments
-main.subtitle=Connect and communicate on various topics
+main.subtitle=Communicate on various topics
 main.popular.posts=Popular Posts
 main.recent.posts=Recent Posts
 
@@ -69,26 +58,26 @@ main.recent.posts=Recent Posts
 # Index Page Hero Section
 #-------------------------------------------------------
 index.hero.title=Welcome to Our Site!
-index.hero.subtitle=An intuitive community with the latest trends. Start now!
+index.hero.subtitle=An intuitive community with the latest trends. Start now.
 index.hero.button.exploreBoard=Explore Board
 
 #-------------------------------------------------------
-# Footer Text
+# Footer Texts
 #-------------------------------------------------------
 footer.copyright=\u00A9 2025 Our Site
-footer.terms=Terms of Service
+footer.terms=Terms of Use
 footer.privacy=Privacy Policy
 footer.contact=Contact Us
 
 #-------------------------------------------------------
-# Label Text
+# Label Texts
 #-------------------------------------------------------
 label.username=Email
 label.password=Password
 label.passwordConfirm=Confirm Password
 label.email=Email Address
 label.name=Name
-label.addressInfo=Address Information
+label.addressInfo=Address Info
 label.zipCode=Zip Code
 label.streetAddress=Address
 label.detailAddress=Detail Address
@@ -99,10 +88,10 @@ label.post.date=Date
 label.post.views=Views
 label.post.comments=Comments
 label.comment.content=Comment Content
-label.search.keyword=Search Keyword
+label.search.keyword=Keyword
 
 #-------------------------------------------------------
-# Placeholder Text
+# Placeholder Texts
 #-------------------------------------------------------
 label.username.placeholder=Enter your email address
 label.password.placeholder=Enter your password
@@ -111,37 +100,38 @@ placeholder.name=Enter your name
 placeholder.passwordConfirm=Re-enter your password
 placeholder.detailAddress=Enter detail address
 placeholder.category.name=Enter category name
-post.title.placeholder=Enter title
-post.content.placeholder=Enter content
-post.search.placeholder=Enter search term...
+post.title.placeholder=Enter the title
+post.content.placeholder=Enter the content
+post.search.placeholder=Enter keyword...
 comment.placeholder=Write a comment
-search.placeholder=Enter search term
+comment.reply.placeholder=Write a comment
+search.placeholder=Enter a keyword
 
 #-------------------------------------------------------
-# Error Page Text
+# Error Page Texts
 #-------------------------------------------------------
-error.title=Error Occurred!
-error.content=Sorry, we cannot process the requested page or function.
+error.title=An error occurred!
+error.content=Sorry, we cannot process the requested page or feature.
 
 # 4xx Errors
 error.4xx.title=Client Error Occurred
-error.4xx.content=There was a client-side issue preventing the request from being processed. Please check the URL or try again.
+error.4xx.content=The request cannot be processed due to a client-side issue. Please check the address or try again.
 error.400.title=Bad Request
-error.400.content=There was an error in the request that prevented processing. Please check your input.
-error.401.title=Authentication Failed: Please login and try again
-error.401.content=Please login and try the request again.
+error.400.content=There is an error in the request. Please check your input.
+error.401.title=Authentication Failed: Please log in and try again
+error.401.content=Please log in and try again.
 error.403.title=Access Denied
-error.403.content=Your current account does not have access to this page.
+error.403.content=You do not have permission to access this page.
 error.404.title=Page Not Found
-error.404.content=The requested page does not exist or has been deleted. Please check the URL.
+error.404.content=The requested page does not exist or has been deleted. Please check the address.
 
 # 5xx Errors
 error.5xx.title=Server Error Occurred
-error.5xx.content=There was a server problem. Please try again later.
+error.5xx.content=There was a problem on the server. Please try again later.
 error.500.title=Internal Server Error
 error.500.content=An internal server error occurred. Please try again later.
 error.503.title=Service Temporarily Unavailable
-error.503.content=The service is temporarily unavailable and cannot process requests. Please try again later.
+error.503.content=The service is temporarily unavailable. Please try again later.
 
 #-------------------------------------------------------
 # Error Page Details
@@ -154,53 +144,52 @@ error.details.message.label=Message:
 error.details.message.default=No message
 
 #-------------------------------------------------------
-# Login/Registration Related Text
+# Login/Registration Related Texts
 #-------------------------------------------------------
-login.title=Please Login!
-login.error=Invalid username or password.
+login.title=Please log in!
+login.error=Incorrect username or password.
 login.logout.success=Successfully logged out.
 login.no.account=Don't have an account?
-login.remember.me=Remember me
+login.remember.me=Keep me logged in
 
 register.title=Sign Up!
-register.success=Registration completed. Please login.
-register.terms=I agree to the Terms of Service.
+register.success=Registration completed. Please log in.
+register.terms=I agree to the Terms of Use.
 register.privacy=I agree to the Privacy Policy.
 
 #-------------------------------------------------------
-# Post Related Text
+# Post Related Texts
 #-------------------------------------------------------
 post.id=ID
 post.title=Title
 post.title.default=No Title
 post.content=Content
 post.category=Category
-post.category.unclassified=Uncategorized
+post.category.unclassified=Unclassified
 post.list=Post List
-post.create=Create Post
+post.create=Register Post
 post.edit=Edit Post
 post.detail=Post Details
-post.empty=No posts available.
+post.empty=No posts registered.
 post.author=Author
 post.author.unknown=Unknown Author
-post.time=Created Time
+post.time=Posted At
 post.comment.count=Comments
-post.delete.confirm=Are you sure you want to delete this?
-post.attachments=File Attachments
+post.delete.confirm=Are you sure you want to delete?
+post.attachments=Attachments
 post.existing.attachments=Existing Attachments
 post.new.attachments=New Attachments
 post.downloads=Downloads
 post.likes=Likes
+post.comments=Comments
+post.views=Views
+post.content.attachments=Attachments
+post.attachment.loginRequired=You must be logged in to download attachments.
 
-comment.reply.placeholder=Write a reply
 #-------------------------------------------------------
 # Post List Page
 #-------------------------------------------------------
 pagination.info.items=Items {0} - {1} of {2} total
-
-#-------------------------------------------------------
-# Pagination
-#-------------------------------------------------------
 pagination.prev=Previous
 pagination.next=Next
 
@@ -210,9 +199,9 @@ pagination.next=Next
 file.icon=\uD83D\uDCCE
 file.drag.message=Drag and drop files or click to upload
 file.max.size=Max 10MB
-file.max.files=Max 5 files
+file.max.files=Up to 5 files
 file.supported.formats=JPG, PNG, GIF, PDF, ZIP
-file.selected.files=Selected Files
+file.selected.files=Selected files
 post.file.size.kb=KB
 file.size.unit.bytes=Bytes
 file.size.unit.kb=KB
@@ -222,7 +211,7 @@ file.size.unit.gb=GB
 #-------------------------------------------------------
 # File Error Messages
 #-------------------------------------------------------
-error.file.max.files=Maximum 5 files can be uploaded
+error.file.max.files=You can upload up to 5 files
 error.file.max.size=Only files under 10MB can be uploaded
 
 #-------------------------------------------------------
@@ -231,23 +220,22 @@ error.file.max.size=Only files under 10MB can be uploaded
 image.preview.alt=Image Preview
 
 #-------------------------------------------------------
-# Comment Related Text
+# Comment Related Texts
 #-------------------------------------------------------
 comment.title=Comments
 comment.write=Write Comment
-comment.empty=No comments available.
-comment.login.required=Login required to write comments.
-comment.login.prefix=You need to
-comment.login.suffix=to write a comment.
-
-# Social Login
-login.social.title=Login with Social Account
-login.social.google=Login with Google
-login.social.kakao=Login with Kakao
-login.social.naver=Login with Naver
+comment.empty=No comments registered.
+comment.login.required=You must be logged in to write a comment.
+comment.login.prefix=To write a comment,
+comment.login.suffix=is required.
+comment.submit=Submit
+comment.author=Author
+comment.author.unknown=Unknown Author
+comment.time=Posted At
+comment.content=Content
 
 #-------------------------------------------------------
-# Search and Filter Related
+# Search & Filter Related
 #-------------------------------------------------------
 search.title=Search Posts
 search.button=Search
@@ -261,24 +249,24 @@ filter.all=All
 # Feedback Section
 #-------------------------------------------------------
 feedback.title=Feedback
-feedback.message=Have any feedback? Let us know!
+feedback.message=Have feedback? Let us know!
 feedback.submit=Submit
 feedback.alert=Thank you for your feedback!
 
 #-------------------------------------------------------
 # Confirmation Messages
 #-------------------------------------------------------
-confirm.delete=Are you sure you want to delete this?
-confirm.delete.post=Are you sure you want to delete this post?
-confirm.delete.comment=Are you sure you want to delete this comment?
-confirm.cancel=Are you sure you want to cancel? Your changes will not be saved.
-confirm.logout=Are you sure you want to logout?
+confirm.delete=Are you sure you want to delete?
+confirm.delete.post=Are you sure you want to delete?
+confirm.delete.comment=Are you sure you want to delete?
+confirm.cancel=Do you want to cancel? Unsaved content will be lost.
+confirm.logout=Do you want to log out?
 
 #-------------------------------------------------------
-# Option Text
+# Option Texts
 #-------------------------------------------------------
 option.none=None
-option.select=Select an option
+option.select=Please select an option
 option.yes=Yes
 option.no=No
 
@@ -287,5 +275,15 @@ option.no=No
 #-------------------------------------------------------
 alert.success=Successfully processed.
 alert.error=An error occurred.
-alert.info=Notice: 
+alert.info=Info: 
 alert.warning=Warning: 
+
+# Social Login
+login.social.title=Login with Social Account
+login.social.google=Login with Google
+login.social.kakao=Login with Kakao
+login.social.naver=Login with Naver
+
+language.current=Language
+
+reply.placeholder=Write a comment
