--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -44,6 +44,7 @@ button.comment.submit=\uB313\uAE00 \uB4F1\uB85D
 button.try.again=\uB2E4\uC2DC \uC2DC\uB3C4
 button.remove=\uC0AD\uC81C
 button.theme.toggle.title=\uD14C\uB9C8 \uBCC0\uACBD
+button.reply=\uB2F5\uAE00
 
 #-------------------------------------------------------
 # \uBA54\uC778 \uCF58\uD150\uCE20
@@ -182,7 +183,8 @@ post.downloads=\uB2E4\uC6B4\uB85C\uB4DC
 post.likes=\uC88B\uC544\uC694
 post.comments=\uB313\uAE00
 post.views=\uC870\uD68C\uC218
-
+post.content.attachments=\uCCA8\uBD80\uD30C\uC77C
+post.attachment.loginRequired=\uCCA8\uBD80\uD30C\uC77C \uB2E4\uC6B4\uB85C\uB4DC\uB294 \uB85C\uADF8\uC778 \uD6C4 \uC774\uC6A9 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
 
 #-------------------------------------------------------
 # \uAC8C\uC2DC\uAE00 \uBAA9\uB85D \uD398\uC774\uC9C0
@@ -281,3 +283,8 @@ login.social.title=\uC18C\uC15C \uACC4\uC815\uC73C\uB85C \uB85C\uADF8\uC778
 login.social.google=\uAD6C\uAE00\uB85C \uB85C\uADF8\uC778
 login.social.kakao=\uCE74\uCE74\uC624\uB85C \uB85C\uADF8\uC778
 login.social.naver=\uB124\uC774\uBC84\uB85C \uB85C\uADF8\uC778
+
+language.current=\uC5B8\uC5B4
+
+reply.placeholder=\uB313\uAE00\uC744 \uC791\uC131\uD574\uC8FC\uC138\uC694
+
